# portable-lce

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  flake.nix  meson.build  meson.options  victims.yml
targets/4J.Render/: 4J_Render.cpp  4J_Render.h  meson.build
targets/Minecraft.Client/: meson.build
targets/Minecraft.Client/Common/: App_structs.h  Consoles_App.cpp  Consoles_App.h
targets/Minecraft.Client/Common/src/Audio/: SoundEngine.cpp
targets/Minecraft.Client/Common/src/Colours/: ColourTable.cpp
targets/Minecraft.Client/Common/src/DLC/: DLCAudioFile.cpp  DLCGameRulesHeader.cpp  DLCManager.cpp  DLCPack.cpp  DLCSkinFile.cpp
targets/Minecraft.Client/Common/src/GameRules/: GameRuleManager.cpp  GameRuleManager.h
targets/Minecraft.Client/Common/src/GameRules/LevelGeneration/: ApplySchematicRuleDefinition.cpp  BiomeOverride.cpp  ConsoleGenerateStructure.cpp  ConsoleSchematicFile.cpp  ConsoleSchematicFile.h  LevelGenerationOptions.cpp  LevelGenerationOptions.h  StartFeature.cpp
targets/Minecraft.Client/Common/src/GameRules/LevelGeneration/StructureActions/: XboxStructureActionGenerateBox.cpp  XboxStructureActionPlaceBlock.cpp  XboxStructureActionPlaceContainer.cpp  XboxStructureActionPlaceSpawner.cpp
targets/Minecraft.Client/Common/src/GameRules/LevelRules/RuleDefinitions/: AddEnchantmentRuleDefinition.cpp  AddItemRuleDefinition.cpp  CollectItemRuleDefinition.cpp  CompleteAllRuleDefinition.cpp  CompoundGameRuleDefinition.cpp  GameRuleDefinition.cpp  LevelRuleset.cpp  NamedAreaRuleDefinition.cpp  UpdatePlayerRuleDefinition.cpp  UseTileRuleDefinition.cpp
targets/Minecraft.Client/Common/src/Network/: GameNetworkManager.cpp  GameNetworkManager.h  PlatformNetworkManagerInterface.h  PlatformNetworkManagerStub.cpp  PlatformNetworkManagerStub.h  Socket.cpp  Socket.h
targets/Minecraft.Client/Common/src/Tutorial/: FullTutorial.cpp  FullTutorial.h  FullTutorialMode.cpp  Tutorial.cpp  Tutorial.h  TutorialMode.cpp
targets/Minecraft.Client/Common/src/Tutorial/Hints/: AreaHint.cpp  DiggerItemHint.cpp  DiggerItemHint.h  LookAtEntityHint.cpp  LookAtTileHint.cpp  TakeItemHint.cpp
targets/Minecraft.Client/Common/src/Tutorial/Tasks/: AreaTask.cpp  ChoiceTask.cpp  FullTutorialActiveTask.cpp  HorseChoiceTask.cpp  InfoTask.cpp  ProgressFlagTask.h
targets/Minecraft.Client/Common/src/UI/: UIBitmapFont.cpp  UIController.cpp  UIController.h  UIGroup.cpp  UIGroup.h  UILayer.cpp  UILayer.h  UIScene.cpp  UIScene.h  UITTFFont.cpp
targets/Minecraft.Client/Common/src/UI/All Platforms/: ArchiveFile.cpp  IUIScene_AbstractContainerMenu.cpp  IUIScene_AbstractContainerMenu.h  IUIScene_AnvilMenu.cpp  IUIScene_CraftingMenu.cpp  IUIScene_CraftingMenu.h  IUIScene_CreativeMenu.cpp  IUIScene_CreativeMenu.h  IUIScene_HUD.cpp  IUIScene_PauseMenu.cpp  IUIScene_TradingMenu.cpp  IUIScene_TradingMenu.h  UIStructs.h
targets/Minecraft.Client/Common/src/UI/Components/: UIComponent_Chat.cpp  UIComponent_Chat.h  UIComponent_DebugUIMarketingGuide.cpp  UIComponent_Logo.cpp  UIComponent_MenuBackground.cpp  UIComponent_MenuBackground.h  UIComponent_Panorama.cpp  UIComponent_Panorama.h  UIComponent_PressStartToPlay.h  UIComponent_Tooltips.cpp  UIComponent_Tooltips.h  UIComponent_TutorialPopup.cpp  UIComponent_TutorialPopup.h  UIScene_HUD.cpp  UIScene_HUD.h
targets/Minecraft.Client/Common/src/UI/Controls/: UIControl.cpp  UIControl_Base.cpp  UIControl_BeaconEffectButton.h  UIControl_BitmapIcon.cpp  UIControl_BitmapIcon.h  UIControl_Button.cpp  UIControl_Button.h  UIControl_ButtonList.cpp  UIControl_ButtonList.h  UIControl_CheckBox.cpp  UIControl_CheckBox.h  UIControl_Cursor.h  UIControl_DLCList.cpp  UIControl_DynamicLabel.cpp  UIControl_EnchantmentBook.cpp  UIControl_EnchantmentBook.h  UIControl_EnchantmentButton.cpp  UIControl_HTMLLabel.h  UIControl_Label.cpp  UIControl_Label.h  UIControl_LeaderboardList.cpp  UIControl_LeaderboardList.h  UIControl_MinecraftHorse.cpp  UIControl_MinecraftPlayer.cpp  UIControl_PlayerList.cpp  UIControl_PlayerSkinPreview.cpp  UIControl_PlayerSkinPreview.h  UIControl_Progress.cpp  UIControl_Progress.h  UIControl_SaveList.cpp  UIControl_Slider.cpp  UIControl_Slider.h  UIControl_SlotList.h  UIControl_SpaceIndicatorBar.cpp  UIControl_SpaceIndicatorBar.h  UIControl_TextInput.cpp  UIControl_TextInput.h  UIControl_TexturePackList.cpp  UIControl_TexturePackList.h  UIControl_Touch.h
targets/Minecraft.Client/Common/src/UI/Scenes/: UIScene_ConnectingProgress.cpp  UIScene_ConnectingProgress.h  UIScene_FullscreenProgress.cpp  UIScene_FullscreenProgress.h  UIScene_Keyboard.cpp  UIScene_Keyboard.h  UIScene_MessageBox.cpp  UIScene_MessageBox.h  UIScene_QuadrantSignin.cpp  UIScene_QuadrantSignin.h  UIScene_Timer.cpp
targets/Minecraft.Client/Common/src/UI/Scenes/Debug/: UIScene_DebugCreateSchematic.cpp  UIScene_DebugOptions.cpp  UIScene_DebugOverlay.cpp  UIScene_DebugSetCamera.cpp
targets/Minecraft.Client/Common/src/UI/Scenes/Frontend Menu screens/: IUIScene_StartGame.cpp  UIScene_CreateWorldMenu.cpp  UIScene_CreateWorldMenu.h  UIScene_DLCMainMenu.h  UIScene_DLCOffersMenu.h  UIScene_EULA.h  UIScene_Intro.cpp  UIScene_JoinMenu.h  UIScene_LaunchMoreOptionsMenu.cpp  UIScene_LaunchMoreOptionsMenu.h  UIScene_LeaderboardsMenu.cpp  UIScene_LeaderboardsMenu.h  UIScene_LoadMenu.cpp  UIScene_LoadMenu.h  UIScene_LoadOrJoinMenu.cpp  UIScene_LoadOrJoinMenu.h  UIScene_MainMenu.cpp  UIScene_MainMenu.h  UIScene_NewUpdateMessage.cpp  UIScene_NewUpdateMessage.h  (+3 more)
targets/Minecraft.Client/Linux/: LinuxGL.cpp  Linux_App.cpp  Linux_Minecraft.cpp  Linux_UIController.cpp
targets/Minecraft.Client/Windows64/Source Files/: Windows64_Minecraft.cpp
targets/Minecraft.Client/src/: BufferedImage.cpp
targets/util/: StringHelpers.cpp  StringHelpers.h  meson.build
targets/util/include/util/: Definitions.h
(+5428 files in other folders)
